feat : add Likenews features
